--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-awesome-modal": "^2.0.5",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.2",
     "react-icons": "^4.1.0",
